[gd_scene load_steps=4 format=3 uid="uid://c2gnl54ls056d"]

[ext_resource type="Script" path="res://dialogs/monolog/monolog_bubble.gd" id="1_g7xp1"]
[ext_resource type="Theme" uid="uid://dvy7di712gwwf" path="res://assets/theme/base_theme.tres" id="1_jwqd4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2x2jm"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 8.0
content_margin_bottom = 0.0

[node name="MonologBubble" type="Node2D"]
z_index = 2
position = Vector2(10, 5)
script = ExtResource("1_g7xp1")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-1, -2, -11, -40, -19, -48, -23, -53, -28, -59, -30, -63, -31, -71, -32, -79, -32, -87, -30, -95, -27, -102, -23, -108, -19, -112, -14, -116, -1, -122, 8, -123, 113, -123, 122, -123, 133, -121, 142, -117, 151, -111, 156, -103, 161, -92, 162, -84, 162, -73, 159, -60, 152, -51, 139, -40, 130, -37, 117, -36, 18, -36, 0, 0)

[node name="Label" type="Label" parent="Polygon2D"]
custom_minimum_size = Vector2(170, 65)
offset_left = -18.0
offset_top = -111.0
offset_right = 152.0
offset_bottom = -46.0
theme = ExtResource("1_jwqd4")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxEmpty_2x2jm")
autowrap_mode = 2
text_overrun_behavior = 3

[node name="PrintTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="CloseTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true
